Fix: overflow issue

--- a/assets/sass/components/navigation/_header.scss
+++ b/assets/sass/components/navigation/_header.scss
@@ -126,10 +126,10 @@
 			&-dropdown-submenu {
 				position: absolute;
 				height: fit-content;
+				width: 100%;
 				background: hsla(var(--white));
 				top: 100%;
 				left: 0;
-				white-space: nowrap;
 				z-index: 999;
 				box-shadow: 0 2px 12px 0 hsla(var(--black) / 0.1);
 				visibility: hidden;
